# shukatsu-app

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  render.yaml  schema.sql
backend/: README.md  database.py  fly.toml  main.py  pyproject.toml  render.yaml
backend/src/shukatsu_backend/: __init__.py  auth.py  config.py  database.py  emails.py  main.py  models.py  reminder_service.py  scheduler.py  schemas.py
backend/src/shukatsu_backend/routers/: auth.py  calendar.py  companies.py  imports.py  internships.py  notifications.py  reminders.py  selections.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: AIImportModal.tsx  ColorPicker.tsx  CompanyQuickCreate.tsx  ConfirmDialog.tsx  Field.tsx  Layout.tsx  Modal.tsx  SortableList.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/pages/: CalendarPage.tsx  CompaniesPage.tsx  DashboardPage.tsx  InternshipsPage.tsx  LoginPage.tsx  SelectionsPage.tsx  SettingsPage.tsx  SignupPage.tsx
frontend/src/store/: auth.ts
src/: index.css
src/pages/: PlanDetailPage.tsx  PlansPage.tsx
study-scheduler/: index.html  package.json
study-scheduler/backend/: main.py  models.py  pyproject.toml  requirements.txt  schemas.py
study-scheduler/src/: App.tsx
study-scheduler/src/api/: client.ts
study-scheduler/src/pages/: BooksPage.tsx  PlanDetailPage.tsx  (+1 more)
(+1 files in other folders)
